examples/type_system/failing/70_hm_prefix_non_numeric_compile_mismatch.flx
// HM hardening: unary '-' with known non-numeric operand fails at compile time.

fn main() {
    let x = "x"
    let y = -x
    y
}
